[chore] Upgrade to Spark 4.0, Java 17, Scala 2.13, Python 3.12
Squashed from 3 previous upgrade commits:
- Changing scala version to 2.13 for spark4.0
- Upgrade to Spark4.0, Java 17, Scala 2.13, Python 3.12.11
- Spark 4.0 release bug fixes (retired AzureMaps, Language API version,
  PEP 440, flash_attn, HasReturnUsage, Fuzzing.scala)

Additional fixes during rebase:
- Scala 2.13 collection compat (getAs[Seq] → scala.collection.Seq, null guards)
- PySpark 4.0: .toDF() → createDataFrame() (removed API)
- Spark 4.0 ANSI mode: try_element_at for array indexing
- Pre-built cp312 wheels for horovod and pandas
- Fabric E2E: auto-create workspace with Runtime 2.0, dynamic Scala suffix
- DL module: try/except in __init__.py for safe jar initialization
- Lazy transformers import in HuggingFaceCausalLMTransform