@@ -133,7 +133,31 @@ object CodegenPlugin extends AutoPlugin {
     (Test / compile).value
     val arg = codegenArgs.value
     Def.task {
-      (Test / runMain).toTask(s" com.microsoft.azure.synapse.ml.codegen.PyCodegen $arg").value
+      val cp = (Test / fullClasspath).value
+      val log = streams.value.log
+      // Ensure java.sql is available to Scala reflection when running PyCodegen under Java 17+
+      val javaOpts = (Test / javaOptions).value ++ Seq(
+        "--add-modules=java.sql",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+      )
+      val opts = ForkOptions()
+        .withRunJVMOptions(javaOpts.toVector)
+        .withOutputStrategy(OutputStrategy.LoggedOutput(log))
+
+      // Write arg to temp file to avoid quoting issues
+      val tempFile = File.createTempFile("pycodegen_conf", ".json")
+      FileUtils.writeStringToFile(tempFile, arg, "UTF-8")
+
+      val exitCode = Fork.java(
+        opts,
+        Seq(
+          "-cp",
+          cp.files.map(_.getAbsolutePath).mkString(File.pathSeparator),
+          "com.microsoft.azure.synapse.ml.codegen.PyCodegen",
+          "@" + tempFile.getAbsolutePath
+        )
+      )
+      if (exitCode != 0) sys.error(s"PyCodegen failed with exit code $exitCode")
     }
   } tag (PyCodeGenTag)
 
@@ -142,7 +166,24 @@ object CodegenPlugin extends AutoPlugin {
     (Test / compile).value
     val arg = testgenArgs.value
     Def.task {
-      (Test / runMain).toTask(s" com.microsoft.azure.synapse.ml.codegen.PyTestGen $arg").value
+      val cp = (Test / fullClasspath).value
+      val log = streams.value.log
+      // We must explicitly add the java.sql modules here because (Test / runner) might not reliably
+      // propagate them to the forked process in all environments or task configurations.
+      val javaOpts = (Test / javaOptions).value ++ Seq(
+        "--add-modules=java.sql",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+      )
+      val opts = ForkOptions()
+        .withRunJVMOptions(javaOpts.toVector)
+        .withOutputStrategy(OutputStrategy.LoggedOutput(log))
+      
+      // Write arg to temp file to avoid quoting issues
+      val tempFile = File.createTempFile("pytestgen_conf", ".json")
+      FileUtils.writeStringToFile(tempFile, arg, "UTF-8")
+      
+      val exitCode = Fork.java(opts, Seq("-cp", cp.files.map(_.getAbsolutePath).mkString(File.pathSeparator), "com.microsoft.azure.synapse.ml.codegen.PyTestGen", "@" + tempFile.getAbsolutePath))
+      if (exitCode != 0) sys.error(s"PyTestGen failed with exit code $exitCode")
     }
   } tag (PyTestGenTag)
 
@@ -151,7 +192,31 @@ object CodegenPlugin extends AutoPlugin {
     (Test / compile).value
     val arg = codegenArgs.value
     Def.task {
-      (Test / runMain).toTask(s" com.microsoft.azure.synapse.ml.codegen.RCodegen $arg").value
+      val cp = (Test / fullClasspath).value
+      val log = streams.value.log
+      // Ensure java.sql module is visible to Scala reflection when running RCodegen
+      val javaOpts = (Test / javaOptions).value ++ Seq(
+        "--add-modules=java.sql",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+      )
+      val opts = ForkOptions()
+        .withRunJVMOptions(javaOpts.toVector)
+        .withOutputStrategy(OutputStrategy.LoggedOutput(log))
+
+      // Write arg to temp file to avoid quoting issues
+      val tempFile = File.createTempFile("rcodegen_conf", ".json")
+      FileUtils.writeStringToFile(tempFile, arg, "UTF-8")
+
+      val exitCode = Fork.java(
+        opts,
+        Seq(
+          "-cp",
+          cp.files.map(_.getAbsolutePath).mkString(File.pathSeparator),
+          "com.microsoft.azure.synapse.ml.codegen.RCodegen",
+          "@" + tempFile.getAbsolutePath
+        )
+      )
+      if (exitCode != 0) sys.error(s"RCodegen failed with exit code $exitCode")
     }
   } tag (RCodeGenTag)
 
@@ -160,11 +225,41 @@ object CodegenPlugin extends AutoPlugin {
     (Test / compile).value
     val arg = testgenArgs.value
     Def.task {
-      (Test / runMain).toTask(s" com.microsoft.azure.synapse.ml.codegen.RTestGen $arg").value
+      val cp = (Test / fullClasspath).value
+      val log = streams.value.log
+      // Ensure java.sql module is visible to Scala reflection when running RTestGen
+      val javaOpts = (Test / javaOptions).value ++ Seq(
+        "--add-modules=java.sql",
+        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+      )
+      val opts = ForkOptions()
+        .withRunJVMOptions(javaOpts.toVector)
+        .withOutputStrategy(OutputStrategy.LoggedOutput(log))
+
+      // Write arg to temp file to avoid quoting issues
+      val tempFile = File.createTempFile("rtestgen_conf", ".json")
+      FileUtils.writeStringToFile(tempFile, arg, "UTF-8")
+
+      val exitCode = Fork.java(
+        opts,
+        Seq(
+          "-cp",
+          cp.files.map(_.getAbsolutePath).mkString(File.pathSeparator),
+          "com.microsoft.azure.synapse.ml.codegen.RTestGen",
+          "@" + tempFile.getAbsolutePath
+        )
+      )
+      if (exitCode != 0) sys.error(s"RTestGen failed with exit code $exitCode")
     }
   } tag (RTestGenTag)
 
   override lazy val projectSettings: Seq[Setting[_]] = Seq(
+    Compile / fork := true,
+    Compile / javaOptions += "--add-modules=java.sql",
+    Test / javaOptions ++= Seq(
+      "--add-modules=java.sql",
+      "--add-opens=java.sql/java.sql=ALL-UNNAMED"
+    ),
     publishMavenStyle := true,
     codegenArgs := {
       CodegenConfig(
@@ -210,7 +305,15 @@ object CodegenPlugin extends AutoPlugin {
         (Test / compile).value
         val arg = codegenArgs.value
         Def.task {
-          (Compile / runMain).toTask(s" com.microsoft.azure.synapse.ml.codegen.CodeGen $arg").value
+          val cp = (Compile / fullClasspath).value
+          val opts = ForkOptions()
+            .withRunJVMOptions((Seq("--add-modules=java.sql") ++ (Compile / javaOptions).value).toVector)
+            .withOutputStrategy(OutputStrategy.LoggedOutput(streams.value.log))
+          // Write arg to temp file to avoid quoting issues
+          val tempFile = File.createTempFile("codegen_conf", ".json")
+          FileUtils.writeStringToFile(tempFile, arg, "UTF-8")
+          val exitCode = Fork.java(opts, Seq("-cp", cp.files.map(_.getAbsolutePath).mkString(File.pathSeparator), "com.microsoft.azure.synapse.ml.codegen.CodeGen", "@" + tempFile.getAbsolutePath))
+          if (exitCode != 0) sys.error(s"Codegen failed with exit code $exitCode")
         }
       } else {
         Def.task {
@@ -258,6 +361,14 @@ object CodegenPlugin extends AutoPlugin {
       Option(packageDirFile.listFiles()).getOrElse(Array.empty).foreach { file =>
         if (file.isFile && file.getName.startsWith(s"${name.value.replace("-", "_")}-") && file.getName.endsWith(".whl")) {
           FileUtils.forceDelete(file)
+        }
+      }
+      // Guard against regressions where Python sources are not packaged into the jar.
+      // We only assert for the core module, since the shared Python package lives there.
+      if (name.value == "synapseml-core") {
+        val sentinel = new File(destPyDir, "ml/core/__init__.py")
+        if (!sentinel.exists()) {
+          sys.error(s"Missing Python payload in $destPyDir (expected ${sentinel.getAbsolutePath})")
         }
       }
       packagePythonWheelCmd(packageDir, pythonSrcDir)
@@ -328,7 +439,7 @@ object CodegenPlugin extends AutoPlugin {
       (Compile / packageBin / artifactPath).value.getParentFile
     },
     mergeCodeDir := {
-      join(baseDirectory.value.getParent, "target", "scala-2.12", "generated")
+      join(baseDirectory.value.getParent, "target", "scala-2.13", "generated")
     },
     codegenDir := {
       join(targetDir.value, "generated")
